# RegexGenerator

./: .gitignore  README.md  docs.html  docs1.html  docs2.html  docs3.html  docs4.html  extractpdf.py  landing_page.html  main.py  pyproject.toml  regex.py  regexgen.py  requirement.txt  test.py
.github/workflows/: docs.yml  docs1.yml  main.yml
Example/Example1/: extractpdf.py
Examples/: requirements.txt
Examples/Example1/: extractpdf.py  requirements.txt
Examples/Example2/: config.py  database.py
Examples/Example3/: example3.py
Examples/Example4/: emailvalidator.py
docs/: docs1.html  docs2.html  docs3.html  landing_page.html
src/: regexgen.py
tests/: test.py
