[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="regexgenerator"
version = "0.0.1"
readme = "README.md"
authors = [
    {name="Nirmal Dahal",  email="nirmaldahal25@gmail.com"},
]
description = "A simple package to create regex easily"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "typing_extensions~=4.3.0",
    "typing~=3.7.4.3"
]

[project.urls]
"Homepage"="https://github.com/SMS-ORG/RegexGenerator/"
"Bug Tracker"="https://github.com/SMS-ORG/RegexGenerator/"

[project.optional-dependencies]
test = [
  "pytest >=6.0",
]